# serializer version: 1
# name: test_get_all_projects_with_pagination
  list([
    dict({
      'created_by': 'user',
      'is_template': False,
      'keywords': list([
      ]),
      'name': 'Project 1',
      'namespace': 'user.doe',
      'repositories': list([
      ]),
      'secrets_mount_directory': '/secrets',
      'slug': 'project-1',
      'visibility': 'private',
    }),
  ])
# ---
# name: test_project_copy_creates_new_build_and_environment_instances
  dict({
    'description': 'A session launcher.',
    'disk_storage': 42,
    'name': 'Launcher',
    'resource_class_id': 1,
  })
# ---
# name: test_project_copy_creates_new_build_and_environment_instances.1
  dict({
    'build_parameters': dict({
      'builder_variant': 'python',
      'frontend_variant': 'vscodium',
      'repository': 'https://github.com/some/repo',
    }),
    'container_image': 'image:unknown-at-the-moment',
    'default_url': '/lab',
    'description': 'Generated environment for Launcher',
    'environment_image_source': 'build',
    'environment_kind': 'CUSTOM',
    'gid': 1000,
    'is_archived': False,
    'name': 'Launcher',
    'port': 8888,
    'uid': 1000,
  })
# ---
# name: test_project_copy_creates_new_build_and_environment_instances.2
  dict({
    'builder_variant': 'python',
    'frontend_variant': 'vscodium',
    'repository': 'https://github.com/some/repo',
  })
# ---
